@@ -1,7 +1,9 @@
 mlterm:\
-	kb=^?:k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~
+	k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~
 xterm:\
 	ut
 rxvt:\
-	kb=^?:kh=\E[7~:@7=\E[8~:k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~:ut
+	kh=\E[7~:@7=\E[8~:k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~:ut
+kterm:\
+	kb=^H:k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~
 *:\
